# Paideia-Agent

./: .gitignore  CONTRIBUTING.ko.md  CONTRIBUTING.md  LICENSE  README.en.md  README.ko.md  README.md  ROADMAP.ko.md  ROADMAP.md  SECURITY.md  pyproject.toml  requirements-lab.txt
.github/workflows/: ci.yml  optional-dependency-audit.yml
apps/ai-talent-foundry/: README.en.md
config/: 22b-ai.default.json
corpus/: seed_ko.txt
docs/: 40_public_release_hygiene_ko.md  closed_growth_ecosystem.en.md  closed_growth_ecosystem.ko.md  codex_oauth_chat_onboarding.ko.md  codex_oauth_telegram_handoff.md  developmental_ecology_v04.ko.md  edge_brain_foundation.md  genius_derivation_engine.en.md  genius_derivation_engine.ko.md  graham_process_replication_correction.md  growth_profile_v05.ko.md  investment_office_agent_team_handoff.md  kibo_reuse_router.md  learning_validity_pr0_baseline.json  legacy_system_integration.ko.md  legacy_system_integration.md  manifesto_alignment_review.ko.md  openclaw_gateway_http_bridge.ko.md  openclaw_goal_readiness.ko.md  openclaw_native_config_merge.ko.md  openclaw_runtime_bundle.ko.md  openclaw_style_onboarding.ko.md  paideia_agent_benchmark.en.md  paideia_agent_benchmark.md  paideia_center.md  physical_ai_sim_rl_benchmark.md  project_manifesto.ko.md  project_manifesto.md  public_release_readiness.ko.md  public_release_readiness.md  research_basis.ko.md  research_basis.md  security_threat_model.ko.md  security_threat_model.md  task_pursuit_mode.en.md  task_pursuit_mode.ko.md  tesla_board_benchmark.ko.md  tesla_board_benchmark.md
docs/release_notes/: closed_loop_curriculum_2026_q3.ko.md  closed_loop_curriculum_2026_q3.md  kibo_pattern_loop_2026_06_22.md
docs/research/: reasoning_kibo_memory_substrate_ko.md
evals/: golden_questions.json  policy_safety_cases.json
examples/: failure_memory.sample.jsonl  graham_junior_onboarding.answers.json  investment_research_task.json  reasoning_kibo.sample.jsonl  role_model_onboarding_samples.json  skill_graph.sample.json  user_decision_model.sample.json  weakness_records.sample.jsonl
schemas/: README.md  adaptive_exam.v1.schema.json  critic_report.v1.schema.json  curriculum_completion.v1.schema.json  curriculum_plan.v1.schema.json  failure_memory.v1.schema.json  first_run_doctor.v1.schema.json  hiring_dossier.v1.schema.json  kibo_record.v1.schema.json  kibo_reuse_plan.v1.schema.json  llm_client_result.v1.schema.json  pattern_candidate.v1.schema.json  pattern_exam_result.v1.schema.json  real_world_outcome.v1.schema.json  reasoning_ledger_candidate.v1.schema.json  reuse_decision.v1.schema.json  skill_graph.v1.schema.json  task_fingerprint.v1.schema.json  tool_execution_artifact_manifest.v1.schema.json  user_decision_model.v1.schema.json  weakness_record.v1.schema.json
schemas/edge_brain/: action_pattern.schema.json  action_receipt.schema.json  artifact_manifest.schema.json  behavioral_exam_result.schema.json  capability_contract.schema.json  observation.schema.json  outcome_evidence.schema.json  remediation_ticket.schema.json  step_credit.schema.json  weakness_record.schema.json  world_state.schema.json
scripts/: check_local_ai_capacity.ps1  check_public_repo_hygiene.ps1  generate_tiny_bigram.ps1  run_doctor.ps1  run_talent_foundry_demo.ps1  run_tests.ps1  setup_venv.ps1  train_tiny_bigram.ps1
src/ai22b/: __init__.py  config.py  doctor.py
tests/: test_bigram.py  test_cli_smoke.py  test_package_smoke.py  test_public_artifact_schemas.py  test_talent_foundry.py  test_talent_foundry_action_approval.py  test_talent_foundry_execution_proof.py  test_talent_foundry_graham.py  test_talent_foundry_graham_kibo_lifecycle.py  test_talent_foundry_growth_package.py  test_talent_foundry_llm_clients.py  test_talent_foundry_llm_plan.py  test_talent_foundry_memory_substrate_chat.py  test_talent_foundry_policy_eval.py  test_talent_foundry_runtime_benchmark.py  test_talent_foundry_telegram_bridge.py
tests/edge_brain/: test_action_gateway.py  test_models_contracts.py
tests/kibo_reuse/: test_adversarial_critic.py  test_applicability_retrieval.py  test_attribution_revision.py  test_behavioral_exam.py  test_case_graph_action_pattern.py  test_contracts_adapter.py  test_curriculum_loop.py  test_fingerprint.py  test_learning_validity_known_gaps.py  test_outcome_evidence.py  test_pattern_layer.py  test_promotion_adapter.py  test_retriever.py  test_router.py  test_scorer.py  (+3 more)
(+154 files in other folders)
