[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "paideia-agent"
version = "0.1.0"
description = "Local-first AI talent foundry and Paideia Agent runtime"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "22B" }]
dependencies = []

[project.scripts]
ai22b-doctor = "ai22b.doctor:main"
ai22b-bigram = "ai22b.from_scratch.bigram:main"
ai22b-talent-foundry = "ai22b.talent_foundry.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
