[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "paideia-agent"
version = "0.1.0"
description = "Local-first AI talent foundry and Paideia Agent runtime"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "22B" }]
license = { file = "LICENSE" }
dependencies = []
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/sinmb79/Paideia-Agent"
Repository = "https://github.com/sinmb79/Paideia-Agent"
Issues = "https://github.com/sinmb79/Paideia-Agent/issues"

[project.optional-dependencies]
dev = [
  "build",
  "pytest",
  "pytest-cov",
  "ruff",
  "tomli; python_version < '3.11'",
]
security = [
  "bandit",
  "pip-audit",
]
live-llm = ["openai>=1.0.0"]
local-llm = ["accelerate", "sentence-transformers", "transformers"]
rag = ["chromadb", "ragas"]
fine-tune = ["datasets", "peft"]
all = [
  "bandit",
  "build",
  "openai>=1.0.0",
  "accelerate",
  "chromadb",
  "datasets",
  "peft",
  "pip-audit",
  "pytest",
  "pytest-cov",
  "ragas",
  "ruff",
  "sentence-transformers",
  "tomli; python_version < '3.11'",
  "transformers",
]

[project.scripts]
ai22b-doctor = "ai22b.doctor:main"
ai22b-bigram = "ai22b.from_scratch.bigram:main"
ai22b-talent-foundry = "ai22b.talent_foundry.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
