[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "paideia-agent"
version = "0.1.0"
description = "Local-first AI talent foundry and Paideia Agent runtime"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "22B" }]
license = "MIT"
license-files = ["LICENSE"]
dependencies = []
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/sinmb79/Paideia-Agent"
Repository = "https://github.com/sinmb79/Paideia-Agent"
Issues = "https://github.com/sinmb79/Paideia-Agent/issues"

[project.optional-dependencies]
dev = [
  "build",
  "jsonschema",
  "pytest",
  "pytest-cov",
  "pyyaml",
  "ruff",
  "tomli; python_version < '3.11'",
]
security = [
  "bandit",
  "pip-audit",
]
live-llm = ["openai>=1.0.0"]
local-llm = ["accelerate", "sentence-transformers", "transformers"]
rag = ["chromadb", "ragas"]
fine-tune = ["datasets", "peft"]
all = [
  "bandit",
  "build",
  "openai>=1.0.0",
  "accelerate",
  "chromadb",
  "datasets",
  "jsonschema",
  "peft",
  "pip-audit",
  "pytest",
  "pytest-cov",
  "pyyaml",
  "ragas",
  "ruff",
  "sentence-transformers",
  "tomli; python_version < '3.11'",
  "transformers",
]

[project.scripts]
ai22b-doctor = "ai22b.doctor:main"
ai22b-bigram = "ai22b.from_scratch.bigram:main"
ai22b-talent-foundry = "ai22b.talent_foundry.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.bandit]
skips = [
  "B105", # Public-safe boolean/status fixture names trigger hardcoded-password false positives.
  "B311", # Educational from-scratch model sampling is deterministic/non-cryptographic.
  "B608", # Long generated markdown templates are misread as SQL construction.
  "B615", # Local-only Hugging Face loading uses local_files_only=True.
]
